<resources>
    <string name="app_name">SSVGI Faculty</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">UserID</string>
    <string name="nav_header_subtitle">User Name</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_changePassword">Change Password</string>

    <string name="menu_Dashboard">Dashboard</string>
    <string name="menu_StudentView">Student View</string>
    <string name="menu_TimeTable">Time Table</string>
    <string name="menu_Attendance">Attendance</string>
    <string name="menu_LecturePlan">Lecture Plan</string>
    <string name="menu_AcademicCalendar">Academic Calendar</string>
    <string name="menu_Marks">Marks</string>
    <string name="menu_StudentGrievance">StudentGrievance</string>
    <string name="menu_CreativeCell">Creative Cell</string>
    <string name="menu_About">About</string>
    <string name="menu_Logout">Logout</string>

    <string-array name="gender">
        <item>Select Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="course">
        <item>Select Course</item>
        <item>B.Tech</item>
        <item>Polytechic</item>
    </string-array>

    <string-array name="department">
        <item>Select Department</item>
        <item>Computer Science</item>
        <item>Information Technology</item>
    </string-array>

    <string-array name="batch">
        <item>Select Batch</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
    </string-array>

    <string-array name="examtype">
        <item>Select Type for Examination</item>
        <item>Unit Test 1st</item>
        <item>Unit Test 2nd</item>
        <item>Mid Term Exam</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_timetable2">Timetable2</string>
    <string name="tab_text_1">Monday</string>
    <string name="tab_text_2">Tuesday</string>
    <string name="tab_text_3">Wednesday</string>
    <string name="tab_text_4">Thrusday</string>
    <string name="tab_text_5">Friday</string>
    <string name="tab_text_6">Saturday</string>


</resources>
